{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 140,
  "lineage": "b1e9cc52-8380-38ef-8dd3-0066ed60bf8c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:297372908336:instance/i-08b3cd4544549fc42",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b3cd4544549fc42",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a133b9dd6f1ab850",
            "private_dns": "ip-10-0-20-242.ec2.internal",
            "private_ip": "10.0.20.242",
            "public_ip": "35.171.19.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d5d3b57bff18c2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f891498cd3b12bc7",
            "tags": {
              "Name": "dev-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01dbb37e8735c56ae"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "aws_security_group.sg",
            "aws_subnet.subnet-1",
            "aws_vpc.my_app",
            "data.aws_ami.latest_amazon_linux_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297372908336:internet-gateway/igw-0a13ed44a71edd023",
            "id": "igw-0a13ed44a71edd023",
            "owner_id": "297372908336",
            "tags": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0d155f2e6554cf4a2"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02160c1ce956051c0",
            "owner_id": "297372908336",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a13ed44a71edd023",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rtb"
            },
            "vpc_id": "vpc-0d155f2e6554cf4a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078a103867d918797",
            "route_table_id": "rtb-02160c1ce956051c0",
            "subnet_id": "subnet-0f891498cd3b12bc7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.my_app_route_table",
            "aws_subnet.subnet-1",
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297372908336:security-group/sg-01dbb37e8735c56ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dbb37e8735c56ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "297372908336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d155f2e6554cf4a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297372908336:subnet/subnet-0f891498cd3b12bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0f891498cd3b12bc7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297372908336",
            "tags": {
              "Name": "dev-subnet"
            },
            "tags_all": {
              "Name": "dev-subnet"
            },
            "vpc_id": "vpc-0d155f2e6554cf4a2"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:297372908336:vpc/vpc-0d155f2e6554cf4a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0baeca4c18c2ea283",
            "default_route_table_id": "rtb-085b6063949b09d73",
            "default_security_group_id": "sg-08954e86caea513bf",
            "dhcp_options_id": "dopt-0b531a71",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d155f2e6554cf4a2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085b6063949b09d73",
            "owner_id": "297372908336",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}